# Math-Tools

src/: Addition.cpp  Addition.h  AdditionOperation.h  AllOperations.h  Arithmetic.h  Brackets.cpp  Brackets.h  BracketsOperation.h  CMakeLists.txt  Const.cpp  Const.h  ConstOperation.h  Division.cpp  Division.h  DivisionOperation.h  Expression.cpp  Expression.h  Multiplication.cpp  Multiplication.h  MultiplicationOperation.h  Operation.h  Parser.cpp  Parser.h  Subtraction.cpp  Subtraction.h  SubtractionOperation.h  SyntaxTree.cpp  SyntaxTree.h  SyntaxTreeVisitior.cpp  SyntaxTreeVisitior.h  Tokenizer.cpp  Tokenizer.h  Visitor.h  calculator.cpp
src/arithmetic/: CMakeLists.txt  Operation.h  Parser.h  SyntaxTree.cpp  SyntaxTree.h  Tokenizer.cpp  Tokenizer.h  Variable.h  Visitor.h
src/arithmetic/boolean/: AllOperations.h  And.cpp  And.h  Boolean.h  Brackets.cpp  Brackets.h  CMakeLists.txt  Const.cpp  Const.h  Expression.cpp  Expression.h  Or.cpp  Or.h
src/arithmetic/numeric/: Addition.cpp  Addition.h  AllOperations.h  Brackets.cpp  Brackets.h  CMakeLists.txt  Const.cpp  Const.h  Division.cpp  Division.h  Expression.cpp  Expression.h  Multiplication.cpp  Multiplication.h  Numeric.h  Subtraction.cpp  Subtraction.h
src/test/: CMakeLists.txt  Expression_test.cpp  Operation_test.cpp  Parser_test.cpp  Tokenizer_test.cpp
src/test/arithmetic_test/: CMakeLists.txt  Tokenizer_test.cpp  Variable_test.cpp
src/test/arithmetic_test/boolean_test/: CMakeLists.txt  Expression_test.cpp  Operation_test.cpp
src/test/arithmetic_test/numeric_test/: CMakeLists.txt  Expression_test.cpp  Operation_test.cpp
