cmake_minimum_required(VERSION 2.6)
project(mathtools)
add_definitions(-std=c++14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
add_subdirectory(arithmetic)
add_executable(calculator calculator.cpp)
target_link_libraries(calculator numeric)
find_package(GTest)
if(GTEST_FOUND)
  enable_testing()
  set(GTest_USE_LIBS)
  add_subdirectory(test)
endif()
